# sync-txt-cdn

./: Cargo.toml  build_linux.sh  qdong_demo.sh
config/: dev.yaml  prod.yaml
src/: main.rs
src/config/: config.rs  mod.rs
