[package]
name = "xreader_cdn_tf"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23.1", features = ["tokio-comp"]}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.10"
config = "0.14.1"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.14"
env_logger = "0.10"
uuid = {version= "0.8.1", features=["v4","serde"]}
reqwest = "0.12.9"
clap = {version= "4.5.20",features=["derive"]}
openssl = { version = "0.10", features = ["vendored"] }